	(has_pending_command, drop_pending_commands): Implement.
	(received): Properly store and build the AST so that only one call
	to execute is made per cycle.
	(simplify): Remove (unused).
	(execute): Adjust.  Don't print anything.  The result is printed by
	the Runner with emit_result.
	(append): Remove.
	* src/userver.cc: Adjust.

2007-07-28  Benoit Sigoure  <tsuna@lrde.epita.fr>

	First attempt to implement parallelism with coroutines.
	* src/runner/Makefile.am: Add new files.
	* src/runner/coroutine.hh: New.
	* src/runner/coroutine.hxx: New.
	* src/runner/fwd.hh: New.
	* src/runner/job.hh (yield): New.
	* src/runner/job.hxx (yield): Implement.
	* src/runner/runner.cc: Complete rewrite with coroutines.  AndExp
	doesn't work.
	* src/runner/runner.hh (Runner): Inherit from Coroutine.
	* src/runner/runner.hxx: Adjust.
	* src/runner/scheduler.cc: New.
	* src/runner/scheduler.hh: Adjust.
	* src/runner/scheduler.hxx (add_job): Implement.
	* src/uconnection.cc (execute): Adjust.
	* src/userver.cc (work): Invoke the Scheduler.

2007-07-28  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Code cleanup (use C++ instead of C).
	* src/parser/uparser.hh (process): Use a std::string instead of a
	ubyte*+int.
	(process): Rename as process_file (using overloads to do something
	different is evil, a small kitten died because of this one).
	* src/parser/uparser.cc (process): Adjust.
	(process(std::string)): Rename as process_file.
	* src/ucommandqueue.hh (popCommand): Return a std::string instead of
	a ubyte* (and don't take an int-reference to return the length).
	* src/ucommandqueue.cc (popCommand),
	* src/uconnection.cc (received),
	* src/uexpression.cc (eval_FUNCTION_EXEC_OR_LOAD): Adjust.

2007-07-28  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Code cleanup.
	* include/kernel/uconnection.hh (execute): Argument is now a
	const reference (BinaryExp) instead of a reference-to-pointer (Ast).
	* src/parser/uparser.hh (commandTree): No longer a public attribute.